<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/base"
    tools:context="scps.nyu.edu.nycrealestate.SaveListingActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_address_caption"/>

        <EditText
            android:id="@+id/save_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:inputType="text"
            android:textColor="@color/white"
            android:background="@color/darkgrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_desc_caption"/>

        <EditText
            android:id="@+id/save_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:inputType="text"
            android:textColor="@color/white"
            android:background="@color/darkgrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_price_caption"/>

        <EditText
            android:id="@+id/save_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:background="@color/darkgrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_sqft_caption"/>

        <EditText
            android:id="@+id/save_sqft"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:inputType="number"
            android:textColor="@color/white"
            android:background="@color/darkgrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_number_bedrooms"/>

        <EditText
            android:id="@+id/save_nbr_bedrooms"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:inputType="number"
            android:textColor="@color/white"
            android:background="@color/darkgrey"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_listing_button"
            android:layout_gravity="center"
            android:background="@color/base"
            android:textColor="@color/orange"
            android:onClick="SaveNewListing"/>
    </LinearLayout>
</ScrollView>
