<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/base"
    tools:context="asa.scps.nyu.edu.nycmaps.SettingsActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/max_price_caption"/>

        <EditText
            android:id="@+id/targetMaxPrice"
            android:layout_width="150dp"
            android:layout_marginTop="20dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@color/darkgrey"
            android:layout_gravity="center|left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/nbr_bedrooms_caption"/>

        <Spinner
            android:id="@+id/targetNbrBedrooms"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@color/darkgrey"
            android:layout_gravity="center|top" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/save_settings_button"
            android:onClick="viewMap"/>

    </LinearLayout>

</LinearLayout>
